standardize site body format

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,5 +15,4 @@ collections:
       - { name: startDate, label: Start Date, widget: date, required: false }
       - { name: endDate, label: End Date, widget: date, required: false }
       - { name: location, label: Location, widget: map }
-      - { name: description, label: Description, widget: markdown }
-      - { name: sources, label: Sources, widget: markdown }
+      - { name: body, label: Body, widget: markdown }
