Add custom address widget

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,6 +14,6 @@ collections:
       - { name: entryDate, label: Entry Date, widget: datetime }
       - { name: startDate, label: Start Date, widget: date, required: false }
       - { name: endDate, label: End Date, widget: date, required: false }
-      - { name: location, label: Location, widget: map }
+      - { name: location, label: Location, widget: address }
       - { name: image, label: Image, widget: image, required: false }
       - { name: body, label: Body, widget: markdown }
